backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 878436876448.dkr.ecr.ap-south-1.amazonaws.com/chatapp-backend:latest
        ports:
        - containerPort: 8000
