frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:878436876448:certificate/4c7c43f0-0422-4462-8970-23f7430b597b
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - parth.buzz
    secretName: parth-buzz-tls
  rules:
  - host: parth.buzz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
